fixed pete's jumps to look more natural

--- a/lambda-quest/src/Views/Game/game.css
+++ b/lambda-quest/src/Views/Game/game.css
@@ -6,6 +6,7 @@
   color: #fff;
   font-size: 10px;
   height: 100%;
+  padding: 29px;
 }
 
 .gamebanner {
